--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              my red hand
-bio:                'Minimal, one column jekyll theme.'
+bio:                'problem?'
 description:        "why?"
 reading_time:       true
 words_per_minute:   200
