--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@ description:        "why?"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
-background:         'assets/img/placeholder-big.jpg'
+# background:         'assets/img/placeholder-big.jpg'
+background:         'assets/img/norway-1758183_1920.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 basseurl:           ""
